--- a/MauiTemplate/AppShell.xaml
+++ b/MauiTemplate/AppShell.xaml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Shell xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GymTracker.AppShell"
-             xmlns:view="clr-namespace:GymTracker.View"
-             FlyoutBehavior="Flyout">
-
-
+		 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+		 x:Class="GymTracker.AppShell"
+		 xmlns:view="clr-namespace:GymTracker.View"
+		 FlyoutBehavior="Flyout"
+		 BackgroundColor="#2D4356"
+		 ForegroundColor="#f2e9e4"
+		 TitleColor="#f2e9e4">
 	<Shell.Resources>
     </Shell.Resources>
 
