--- a/MauiTemplate/App.xaml
+++ b/MauiTemplate/App.xaml
@@ -6,7 +6,7 @@
 
 	<Application.Resources>
 		<Style TargetType="Label">
-			<Setter Property="TextColor" Value="#f2e9e4"/>
+			<Setter Property="TextColor" Value="#EDEDED"/>
 		</Style>
 		<Style TargetType="Button">
 			<Setter Property="TextColor" Value="#f2e9e4"/>
