basic exercise functionality

--- a/MauiTemplate/App.xaml
+++ b/MauiTemplate/App.xaml
@@ -5,6 +5,9 @@
              x:Class="GymTracker.App">
 
 	<Application.Resources>
+		<Style TargetType="ContentPage">
+			<Setter Property="BackgroundColor" Value="#7B8FA1"/>
+		</Style>
 		<Style TargetType="Label">
 			<Setter Property="TextColor" Value="#EDEDED"/>
 		</Style>
