--- a/MauiTemplate/View/ExercisesPage.xaml
+++ b/MauiTemplate/View/ExercisesPage.xaml
@@ -5,7 +5,38 @@
 	 x:Class="GymTracker.View.ExercisesPage"
 	 xmlns:model="clr-namespace:GymTracker.Model"
 	 xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
-	 Title="Exercises">
-	
-	<Label>Exercises Page</Label>
+	 x:DataType="viewmodel:ExercisesPageViewModel"
+	 Title="Exercises"
+	 BackgroundColor="#7B8FA1">
+
+	<StackLayout>
+		<CollectionView ItemsSource="{Binding ExerciseList}">
+			<CollectionView.ItemTemplate>
+				<DataTemplate x:DataType="model:Exercise">
+					<Grid Margin="0,5,0,5" BackgroundColor="#567189">
+						<Grid.RowDefinitions>
+							<RowDefinition/>
+						</Grid.RowDefinitions>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="3*"/>
+							<ColumnDefinition Width="1*"/>
+						</Grid.ColumnDefinitions>
+						<Grid.GestureRecognizers>
+							<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ExercisesPageViewModel}}, Path=GoToExerciseDetailsCommand}"
+												  CommandParameter="{Binding .}"
+												  NumberOfTapsRequired="1"
+												  />
+						</Grid.GestureRecognizers>
+
+						<Label Text="{Binding Name}" FontSize="32" Margin="10,5,0,5"/>
+						<Button Grid.Column="1" Text="Delete" HorizontalOptions="End" Margin="2,2,2,2" 
+								Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ExercisesPageViewModel}}, Path=DeleteCommand}" 
+								CommandParameter="{Binding .}"/>
+					</Grid>
+				</DataTemplate>
+			</CollectionView.ItemTemplate>
+		</CollectionView>
+
+		<Button Text="Add New Exercise" FontSize="32" Margin="10,10,10,10" Command="{Binding GoToExerciseFormCommand}"/>
+	</StackLayout>
 </ContentPage>
