--- a/MauiTemplate/View/RoutinesPage.xaml
+++ b/MauiTemplate/View/RoutinesPage.xaml
@@ -26,12 +26,16 @@
 						</Grid.GestureRecognizers>
 
 						<Label Text="{Binding Name}" FontSize="32" Margin="10,5,0,5"/>
-						<Button Grid.Column="1" Text="Delete" HorizontalOptions="End" Margin="2,2,2,2"/>
+						<Button Grid.Column="1" Text="Delete" HorizontalOptions="End" Margin="2,2,2,2" 
+								Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RoutinesPageViewModel}}, Path=DeleteCommand}" 
+								CommandParameter="{Binding .}"/>
+
 					</Grid>
 				</DataTemplate>
 			</CollectionView.ItemTemplate>
 		</CollectionView>
 
-		<Button Text="Add New Routine" FontSize="32" Margin="10,10,10,10"/>
+		<Button Text="Create New Routine" FontSize="32" Margin="10,10,10,10" Command="{Binding GoToNewRoutineCommand}"/>
+
 	</StackLayout>
 </ContentPage>
