--- a/MauiTemplate/View/RoutinesPage.xaml
+++ b/MauiTemplate/View/RoutinesPage.xaml
@@ -22,7 +22,8 @@
 							<ColumnDefinition Width="1*"/>
 						</Grid.ColumnDefinitions>
 						<Grid.GestureRecognizers>
-							<TapGestureRecognizer Tapped="RoutineTapped" NumberOfTapsRequired="1"/>
+							<TapGestureRecognizer NumberOfTapsRequired="1" 
+												  Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RoutinesPageViewModel}}, Path=RoutineTappedCommand}"/>
 						</Grid.GestureRecognizers>
 
 						<Label Text="{Binding Name}" FontSize="32" Margin="10,5,0,5"/>
