--- a/MauiTemplate/View/NewRoutinePage.xaml
+++ b/MauiTemplate/View/NewRoutinePage.xaml
@@ -12,60 +12,59 @@
 
 	<StackLayout>
 		<VerticalStackLayout>
-			<Label Text="Routine Name"/>
-			<Entry MaxLength="20" Placeholder="Enter name" TextChanged="Entry_TextChanged"/>
+			<Label Text="Routine Name" />
+			<Entry MaxLength="20" Placeholder="Enter name" TextChanged="Entry_TextChanged" />
 		</VerticalStackLayout>
 
-		<Label Text="Saved Exercises:"/>
+		<Label Text="Saved Exercises:" />
 		<ScrollView VerticalOptions="FillAndExpand">
 			<CollectionView ItemsSource="{Binding ExerciseList}">
 				<CollectionView.ItemTemplate>
 					<DataTemplate x:DataType="model:Exercise">
 						<Grid Margin="0,5,0,5" BackgroundColor="#567189">
 							<Grid.RowDefinitions>
-								<RowDefinition/>
+								<RowDefinition />
 							</Grid.RowDefinitions>
 							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="3*"/>
-								<ColumnDefinition Width="1*"/>
+								<ColumnDefinition Width="3*" />
+								<ColumnDefinition Width="1*" />
 							</Grid.ColumnDefinitions>
 							<Grid.GestureRecognizers>
 								<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:NewRoutinePageViewModel}}, Path=AddExerciseCommand}"
 											  CommandParameter="{Binding .}"
-											  NumberOfTapsRequired="1"
-											  />
+											  NumberOfTapsRequired="1" />
 							</Grid.GestureRecognizers>
 
-							<Label Text="{Binding Name}" FontSize="32" Margin="10,5,0,5"/>
+							<Label Text="{Binding Name}" FontSize="32" Margin="10,5,0,5" />
 						</Grid>
 					</DataTemplate>
 				</CollectionView.ItemTemplate>
 			</CollectionView>
 		</ScrollView>
-		
-		<Label Text="Added exercises:"/>
+
+		<Label Text="Added exercises:" />
 		<ScrollView VerticalOptions="FillAndExpand">
 			<CollectionView ItemsSource="{Binding AddedExerciseList}">
 				<CollectionView.ItemTemplate>
 					<DataTemplate x:DataType="model:AddedExerciseWrapper">
 						<Grid Margin="0,5,0,5" BackgroundColor="#567189">
 							<Grid.RowDefinitions>
-								<RowDefinition/>
+								<RowDefinition />
 							</Grid.RowDefinitions>
 							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="3*"/>
-								<ColumnDefinition Width="1*"/>
+								<ColumnDefinition Width="3*" />
+								<ColumnDefinition Width="1*" />
 							</Grid.ColumnDefinitions>
-							
-							<Label Text="{Binding Exercise.Name}" FontSize="32" Margin="10,5,0,5"/>
+
+							<Label Text="{Binding Exercise.Name}" FontSize="32" Margin="10,5,0,5" />
 							<HorizontalStackLayout Grid.Column="1">
 								<Button Text="-" Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:NewRoutinePageViewModel}}, Path=DecreaseSetsCommand}"
-										CommandParameter="{Binding .}"/>
-								<Label MaximumWidthRequest="64" FontSize="32" Text="{Binding Sets}"/>
+										CommandParameter="{Binding .}" />
+								<Label MaximumWidthRequest="64" FontSize="32" Text="{Binding Sets}" />
 								<Button Text="+" Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:NewRoutinePageViewModel}}, Path=IncreaseSetsCommand}"
-										CommandParameter="{Binding .}"/>
+										CommandParameter="{Binding .}" />
 								<Button Text="Delete" Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:NewRoutinePageViewModel}}, Path=DeleteExerciseCommand}"
-										CommandParameter="{Binding .}"/>
+										CommandParameter="{Binding .}" />
 							</HorizontalStackLayout>
 						</Grid>
 					</DataTemplate>
@@ -73,6 +72,6 @@
 			</CollectionView>
 		</ScrollView>
 
-		<Button Text="Save routine" Command="{Binding SaveRoutineCommand}"/>
+		<Button Text="Save routine" Command="{Binding SaveRoutineCommand}" />
 	</StackLayout>
 </ContentPage>
