finish code cleanup

--- a/MauiTemplate/View/ExerciseForm.xaml
+++ b/MauiTemplate/View/ExerciseForm.xaml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GymTracker.View.ExerciseForm"
-			 xmlns:model="clr-namespace:GymTracker.Model"
-			 xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
-			 x:DataType="viewmodel:ExerciseFormViewModel"
-             Title="Add New Exercise"
-			 BackgroundColor="#7B8FA1"
-			 Shell.FlyoutBehavior="Disabled">
+<ContentPage
+	x:Class="GymTracker.View.ExerciseForm"
+	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+	xmlns:model="clr-namespace:GymTracker.Model"
+	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
+	Title="Add New Exercise"
+	x:DataType="viewmodel:ExerciseFormViewModel"
+	BackgroundColor="#7B8FA1"
+	Shell.FlyoutBehavior="Disabled">
 
 	<StackLayout>
 		<Label Text="Name" />
-		<Entry MaxLength="20" Placeholder="Enter name" TextChanged="NameChanged" />
+		<Entry
+			MaxLength="20"
+			Placeholder="Enter name"
+			TextChanged="NameChanged" />
 
 		<Label Text="Notes" />
-		<Entry MaxLength="300" Placeholder="Type notes" TextChanged="NotesChanged" />
+		<Entry
+			MaxLength="300"
+			Placeholder="Type notes"
+			TextChanged="NotesChanged" />
 
 		<HorizontalStackLayout>
 			<Label Text="Track Reps" VerticalTextAlignment="Center" />
@@ -29,6 +36,6 @@
 			<CheckBox Margin="20,0,0,0" CheckedChanged="TrackTimeChanged" />
 		</HorizontalStackLayout>
 
-		<Button Text="Create" Command="{Binding AddExerciseToDbCommand}" />
+		<Button Command="{Binding AddExerciseToDbCommand}" Text="Create" />
 	</StackLayout>
 </ContentPage>
