--- a/MauiTemplate/Platforms/Windows/App.xaml
+++ b/MauiTemplate/Platforms/Windows/App.xaml
@@ -2,7 +2,5 @@
     x:Class="GymTracker.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:GymTracker.WinUI">
-
+    xmlns:maui="using:Microsoft.Maui">
 </maui:MauiWinUIApplication>
