--- a/MauiTemplate/View/ExerciseDetailsPage.xaml
+++ b/MauiTemplate/View/ExerciseDetailsPage.xaml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GymTracker.View.ExerciseDetailsPage"
-			 xmlns:model="clr-namespace:GymTracker.Model"
-			 xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
-			 x:DataType="viewmodel:ExerciseDetailsPageViewModel"
-             Title="Details"
-			 Shell.FlyoutBehavior="Disabled">
+<ContentPage
+	x:Class="GymTracker.View.ExerciseDetailsPage"
+	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+	xmlns:model="clr-namespace:GymTracker.Model"
+	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
+	Title="Details"
+	x:DataType="viewmodel:ExerciseDetailsPageViewModel"
+	Shell.FlyoutBehavior="Disabled">
 
 	<VerticalStackLayout>
 		<HorizontalStackLayout>
@@ -20,9 +21,9 @@
 		<HorizontalStackLayout>
 			<Label Text="Tracking:" />
 			<VerticalStackLayout>
-				<Label Text="reps" IsVisible="{Binding Exercise.TrackReps}" />
-				<Label Text="weight" IsVisible="{Binding Exercise.TrackWeight}" />
-				<Label Text="time" IsVisible="{Binding Exercise.TrackTime}" />
+				<Label IsVisible="{Binding Exercise.TrackReps}" Text="reps" />
+				<Label IsVisible="{Binding Exercise.TrackWeight}" Text="weight" />
+				<Label IsVisible="{Binding Exercise.TrackTime}" Text="time" />
 			</VerticalStackLayout>
 		</HorizontalStackLayout>
 	</VerticalStackLayout>
