--- a/MauiTemplate/View/ExercisesPage.xaml
+++ b/MauiTemplate/View/ExercisesPage.xaml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-	 xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-	 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-	 x:Class="GymTracker.View.ExercisesPage"
-	 xmlns:model="clr-namespace:GymTracker.Model"
-	 xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
-	 x:DataType="viewmodel:ExercisesPageViewModel"
-	 Title="Exercises"
-	 BackgroundColor="#7B8FA1">
+	x:Class="GymTracker.View.ExercisesPage"
+	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+	xmlns:model="clr-namespace:GymTracker.Model"
+	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
+	Title="Exercises"
+	x:DataType="viewmodel:ExercisesPageViewModel"
+	BackgroundColor="#7B8FA1">
 
 	<StackLayout>
 		<ScrollView VerticalOptions="FillAndExpand">
@@ -23,21 +23,32 @@
 								<ColumnDefinition Width="1*" />
 							</Grid.ColumnDefinitions>
 							<Grid.GestureRecognizers>
-								<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ExercisesPageViewModel}}, Path=GoToExerciseDetailsCommand}"
-												  CommandParameter="{Binding .}"
-												  NumberOfTapsRequired="1" />
+								<TapGestureRecognizer
+									Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ExercisesPageViewModel}}, Path=GoToExerciseDetailsCommand}"
+									CommandParameter="{Binding .}"
+									NumberOfTapsRequired="1" />
 							</Grid.GestureRecognizers>
 
-							<Label Text="{Binding Name}" FontSize="32" Margin="10,5,0,5" />
-							<Button Grid.Column="1" Text="Delete" HorizontalOptions="End" Margin="2,2,2,2"
+							<Label
+								Margin="10,5,0,5"
+								FontSize="32"
+								Text="{Binding Name}" />
+							<Button
+								Grid.Column="1"
+								Margin="2,2,2,2"
 								Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ExercisesPageViewModel}}, Path=DeleteCommand}"
-								CommandParameter="{Binding .}" />
+								CommandParameter="{Binding .}"
+								HorizontalOptions="End"
+								Text="Delete" />
 						</Grid>
 					</DataTemplate>
 				</CollectionView.ItemTemplate>
 			</CollectionView>
 		</ScrollView>
 
-		<Button Text="Add New Exercise" Margin="10,10,10,10" Command="{Binding GoToExerciseFormCommand}" />
+		<Button
+			Margin="10,10,10,10"
+			Command="{Binding GoToExerciseFormCommand}"
+			Text="Add New Exercise" />
 	</StackLayout>
 </ContentPage>
