--- a/MauiTemplate/View/MainPage.xaml
+++ b/MauiTemplate/View/MainPage.xaml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="GymTracker.View.MainPage"
-    xmlns:model="clr-namespace:GymTracker.Model"
-    xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
+	x:Class="GymTracker.View.MainPage"
+	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+	xmlns:model="clr-namespace:GymTracker.Model"
+	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
 	x:DataType="viewmodel:MainPageViewModel"
 	BackgroundColor="{Binding BackgroundColor}">
 
-	<!--Main Grid-->
+	<!--  Main Grid  -->
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="20" />
@@ -17,25 +17,27 @@
 		</Grid.RowDefinitions>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="20" />
-			<ColumnDefinition Width="*" x:Name="col" />
+			<ColumnDefinition x:Name="col" Width="*" />
 			<ColumnDefinition Width="20" />
 		</Grid.ColumnDefinitions>
 
-		<StackLayout HorizontalOptions="Center"
-				 VerticalOptions="Center"
-				 Grid.Row="1" Grid.Column="1">
-			<!--Circle-->
+		<StackLayout
+			Grid.Row="1"
+			Grid.Column="1"
+			HorizontalOptions="Center"
+			VerticalOptions="Center">
+			<!--  Circle  -->
 			<Grid MaximumWidthRequest="300">
 				<!--
-				Fill="#141414"
+					Fill="#141414"
 				-->
 				<Ellipse
 					Aspect="Uniform"
 					Fill="{Binding EllipseColor}"
-					Stroke="#EDEDED"
-					StrokeThickness="5"
+					MaximumHeightRequest="300"
 					MaximumWidthRequest="300"
-					MaximumHeightRequest="300" />
+					Stroke="#EDEDED"
+					StrokeThickness="5" />
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="*" />
@@ -46,67 +48,144 @@
 						<ColumnDefinition Width="*" />
 					</Grid.ColumnDefinitions>
 				</Grid>
-				<StackLayout HorizontalOptions="Center" VerticalOptions="Center" IsVisible="True">
-					<Label Grid.Row="0" HorizontalOptions="Center" VerticalOptions="Center" FontSize="52" Text="{Binding SetsCountLeft}" />
-					<Label Grid.Row="1" FontSize="76" Text="WORK" IsVisible="{Binding IsNotRestTime}"></Label>
-					<Label Grid.Row="1" FontSize="76" Text="REST" IsVisible="{Binding IsRestTime}"></Label>
-					<Label Grid.Row="2" HorizontalOptions="Center" VerticalOptions="Center" FontSize="52" Text="{Binding WorkTimeLeft}" IsVisible="{Binding IsNotRestTime}" />
-					<Label Grid.Row="2" HorizontalOptions="Center" VerticalOptions="Center" FontSize="52" Text="{Binding RestTimeLeft}" IsVisible="{Binding IsRestTime}" />
+				<StackLayout
+					HorizontalOptions="Center"
+					IsVisible="True"
+					VerticalOptions="Center">
+					<Label
+						Grid.Row="0"
+						FontSize="52"
+						HorizontalOptions="Center"
+						Text="{Binding SetsCountLeft}"
+						VerticalOptions="Center" />
+					<Label
+						Grid.Row="1"
+						FontSize="76"
+						IsVisible="{Binding IsNotRestTime}"
+						Text="WORK" />
+					<Label
+						Grid.Row="1"
+						FontSize="76"
+						IsVisible="{Binding IsRestTime}"
+						Text="REST" />
+					<Label
+						Grid.Row="2"
+						FontSize="52"
+						HorizontalOptions="Center"
+						IsVisible="{Binding IsNotRestTime}"
+						Text="{Binding WorkTimeLeft}"
+						VerticalOptions="Center" />
+					<Label
+						Grid.Row="2"
+						FontSize="52"
+						HorizontalOptions="Center"
+						IsVisible="{Binding IsRestTime}"
+						Text="{Binding RestTimeLeft}"
+						VerticalOptions="Center" />
 				</StackLayout>
 			</Grid>
 
-			<!--Settings-->
+			<!--  Settings  -->
 			<StackLayout IsVisible="True">
-				<Label HorizontalOptions="Center" FontSize="24" Margin="10, 0, 0, 0">Sets</Label>
+				<Label
+					Margin="10,0,0,0"
+					FontSize="24"
+					HorizontalOptions="Center">
+					Sets
+				</Label>
 				<HorizontalStackLayout HorizontalOptions="Center">
-					<Button ClassId="sets"
-							Text="-"
-							IsVisible="{Binding IsNotStarted}"
-							Pressed="OnMinusBtnPressed"
-							Released="OnBtnReleased" />
-					<Label VerticalOptions="Center" Margin="10, 0" FontSize="24" Text="{Binding SetsCount}" />
-					<Button ClassId="sets"
-							Text="+"
-							IsVisible="{Binding IsNotStarted}"
-							Pressed="OnPlusBtnPressed"
-							Released="OnBtnReleased" />
+					<Button
+						ClassId="sets"
+						IsVisible="{Binding IsNotStarted}"
+						Pressed="OnMinusBtnPressed"
+						Released="OnBtnReleased"
+						Text="-" />
+					<Label
+						Margin="10,0"
+						FontSize="24"
+						Text="{Binding SetsCount}"
+						VerticalOptions="Center" />
+					<Button
+						ClassId="sets"
+						IsVisible="{Binding IsNotStarted}"
+						Pressed="OnPlusBtnPressed"
+						Released="OnBtnReleased"
+						Text="+" />
 				</HorizontalStackLayout>
 
-				<Label HorizontalOptions="Center" FontSize="24" Margin="10, 0, 0, 0">Work Time</Label>
+				<Label
+					Margin="10,0,0,0"
+					FontSize="24"
+					HorizontalOptions="Center">
+					Work Time
+				</Label>
 				<HorizontalStackLayout HorizontalOptions="Center">
-					<Button ClassId="workTime"
-							Text="-"
-							IsVisible="{Binding IsNotStarted}"
-							Pressed="OnMinusBtnPressed"
-							Released="OnBtnReleased" />
-					<Label VerticalOptions="Center" Margin="10, 0" FontSize="24" Text="{Binding WorkTime}" />
-					<Button ClassId="workTime"
-							Text="+"
-							IsVisible="{Binding IsNotStarted}"
-							Pressed="OnPlusBtnPressed"
-							Released="OnBtnReleased" />
+					<Button
+						ClassId="workTime"
+						IsVisible="{Binding IsNotStarted}"
+						Pressed="OnMinusBtnPressed"
+						Released="OnBtnReleased"
+						Text="-" />
+					<Label
+						Margin="10,0"
+						FontSize="24"
+						Text="{Binding WorkTime}"
+						VerticalOptions="Center" />
+					<Button
+						ClassId="workTime"
+						IsVisible="{Binding IsNotStarted}"
+						Pressed="OnPlusBtnPressed"
+						Released="OnBtnReleased"
+						Text="+" />
 				</HorizontalStackLayout>
 
-				<Label HorizontalOptions="Center" FontSize="24" Margin="10, 0, 0, 0">Rest Time</Label>
+				<Label
+					Margin="10,0,0,0"
+					FontSize="24"
+					HorizontalOptions="Center">
+					Rest Time
+				</Label>
 				<HorizontalStackLayout HorizontalOptions="Center">
-					<Button ClassId="restTime"
-							Text="-"
-							IsVisible="{Binding IsNotStarted}"
-							Pressed="OnMinusBtnPressed"
-							Released="OnBtnReleased" />
-					<Label VerticalOptions="Center" Margin="10, 0" FontSize="24" Text="{Binding RestTime}" />
-					<Button ClassId="restTime"
-							Text="+"
-							IsVisible="{Binding IsNotStarted}"
-							Pressed="OnPlusBtnPressed"
-							Released="OnBtnReleased" />
+					<Button
+						ClassId="restTime"
+						IsVisible="{Binding IsNotStarted}"
+						Pressed="OnMinusBtnPressed"
+						Released="OnBtnReleased"
+						Text="-" />
+					<Label
+						Margin="10,0"
+						FontSize="24"
+						Text="{Binding RestTime}"
+						VerticalOptions="Center" />
+					<Button
+						ClassId="restTime"
+						IsVisible="{Binding IsNotStarted}"
+						Pressed="OnPlusBtnPressed"
+						Released="OnBtnReleased"
+						Text="+" />
 				</HorizontalStackLayout>
 			</StackLayout>
 
-			<Button Text="Start" Margin="0, 24, 0, 0" Command="{Binding StartIntervalCommand}" IsVisible="{Binding IsNotStarted}" />
-			<Button Text="Pause" Margin="0, 24, 0, 0" Command="{Binding PauseIntervalCommand}" IsVisible="{Binding IsRunning}" />
-			<Button Text="Resume" Margin="0, 24, 0, 0" Command="{Binding ResumeIntervalCommand}" IsVisible="{Binding IsNotRunningAndIsStarted}" />
-			<Button Text="Stop" Margin="0, 24, 0, 0" Command="{Binding StopIntervalCommand}" IsVisible="{Binding IsStarted}" />
+			<Button
+				Margin="0,24,0,0"
+				Command="{Binding StartIntervalCommand}"
+				IsVisible="{Binding IsNotStarted}"
+				Text="Start" />
+			<Button
+				Margin="0,24,0,0"
+				Command="{Binding PauseIntervalCommand}"
+				IsVisible="{Binding IsRunning}"
+				Text="Pause" />
+			<Button
+				Margin="0,24,0,0"
+				Command="{Binding ResumeIntervalCommand}"
+				IsVisible="{Binding IsNotRunningAndIsStarted}"
+				Text="Resume" />
+			<Button
+				Margin="0,24,0,0"
+				Command="{Binding StopIntervalCommand}"
+				IsVisible="{Binding IsStarted}"
+				Text="Stop" />
 		</StackLayout>
 	</Grid>
 </ContentPage>
