--- a/MauiTemplate/View/NewRoutinePage.xaml
+++ b/MauiTemplate/View/NewRoutinePage.xaml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GymTracker.View.NewRoutinePage"
-			 xmlns:model="clr-namespace:GymTracker.Model"
-			 xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
-			 x:DataType="viewmodel:NewRoutinePageViewModel"
-			 xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-			 Title="New Routine"
-			 Shell.FlyoutBehavior="Disabled"
-			 BackgroundColor="#7B8FA1">
+<ContentPage
+	x:Class="GymTracker.View.NewRoutinePage"
+	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+	xmlns:model="clr-namespace:GymTracker.Model"
+	xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
+	Title="New Routine"
+	x:DataType="viewmodel:NewRoutinePageViewModel"
+	BackgroundColor="#7B8FA1"
+	Shell.FlyoutBehavior="Disabled">
 
 	<StackLayout>
 		<VerticalStackLayout>
 			<Label Text="Routine Name" />
-			<Entry MaxLength="20" Placeholder="Enter name" TextChanged="Entry_TextChanged" />
+			<Entry
+				MaxLength="20"
+				Placeholder="Enter name"
+				TextChanged="Entry_TextChanged" />
 		</VerticalStackLayout>
 
 		<Label Text="Saved Exercises:" />
@@ -30,12 +34,16 @@
 								<ColumnDefinition Width="1*" />
 							</Grid.ColumnDefinitions>
 							<Grid.GestureRecognizers>
-								<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:NewRoutinePageViewModel}}, Path=AddExerciseCommand}"
-											  CommandParameter="{Binding .}"
-											  NumberOfTapsRequired="1" />
+								<TapGestureRecognizer
+									Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:NewRoutinePageViewModel}}, Path=AddExerciseCommand}"
+									CommandParameter="{Binding .}"
+									NumberOfTapsRequired="1" />
 							</Grid.GestureRecognizers>
 
-							<Label Text="{Binding Name}" FontSize="32" Margin="10,5,0,5" />
+							<Label
+								Margin="10,5,0,5"
+								FontSize="32"
+								Text="{Binding Name}" />
 						</Grid>
 					</DataTemplate>
 				</CollectionView.ItemTemplate>
@@ -56,15 +64,27 @@
 								<ColumnDefinition Width="1*" />
 							</Grid.ColumnDefinitions>
 
-							<Label Text="{Binding Exercise.Name}" FontSize="32" Margin="10,5,0,5" />
+							<Label
+								Margin="10,5,0,5"
+								FontSize="32"
+								Text="{Binding Exercise.Name}" />
 							<HorizontalStackLayout Grid.Column="1">
-								<Button Text="-" Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:NewRoutinePageViewModel}}, Path=DecreaseSetsCommand}"
-										CommandParameter="{Binding .}" />
-								<Label MaximumWidthRequest="64" FontSize="32" Text="{Binding Sets}" />
-								<Button Text="+" Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:NewRoutinePageViewModel}}, Path=IncreaseSetsCommand}"
-										CommandParameter="{Binding .}" />
-								<Button Text="Delete" Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:NewRoutinePageViewModel}}, Path=DeleteExerciseCommand}"
-										CommandParameter="{Binding .}" />
+								<Button
+									Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:NewRoutinePageViewModel}}, Path=DecreaseSetsCommand}"
+									CommandParameter="{Binding .}"
+									Text="-" />
+								<Label
+									FontSize="32"
+									MaximumWidthRequest="64"
+									Text="{Binding Sets}" />
+								<Button
+									Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:NewRoutinePageViewModel}}, Path=IncreaseSetsCommand}"
+									CommandParameter="{Binding .}"
+									Text="+" />
+								<Button
+									Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:NewRoutinePageViewModel}}, Path=DeleteExerciseCommand}"
+									CommandParameter="{Binding .}"
+									Text="Delete" />
 							</HorizontalStackLayout>
 						</Grid>
 					</DataTemplate>
@@ -72,6 +92,6 @@
 			</CollectionView>
 		</ScrollView>
 
-		<Button Text="Save routine" Command="{Binding SaveRoutineCommand}" />
+		<Button Command="{Binding SaveRoutineCommand}" Text="Save routine" />
 	</StackLayout>
 </ContentPage>
