--- a/MauiTemplate/View/RoutinesPage.xaml
+++ b/MauiTemplate/View/RoutinesPage.xaml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-	 xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-	 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-	 x:Class="GymTracker.View.RoutinesPage"
-	 xmlns:model="clr-namespace:GymTracker.Model"
-	 xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
-	 x:DataType="viewmodel:RoutinesPageViewModel"
-	 Title="Your Routines"
-	 BackgroundColor="#7B8FA1">
+	x:Class="GymTracker.View.RoutinesPage"
+	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+	xmlns:model="clr-namespace:GymTracker.Model"
+	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
+	Title="Your Routines"
+	x:DataType="viewmodel:RoutinesPageViewModel"
+	BackgroundColor="#7B8FA1">
 
 	<StackLayout>
 		<CollectionView ItemsSource="{Binding RoutinesList}">
@@ -22,19 +22,28 @@
 							<ColumnDefinition Width="1*" />
 						</Grid.ColumnDefinitions>
 						<Grid.GestureRecognizers>
-							<TapGestureRecognizer NumberOfTapsRequired="1"
-												  Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RoutinesPageViewModel}}, Path=RoutineTappedCommand}" />
+							<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RoutinesPageViewModel}}, Path=RoutineTappedCommand}" NumberOfTapsRequired="1" />
 						</Grid.GestureRecognizers>
 
-						<Label Text="{Binding Name}" FontSize="32" Margin="10,5,0,5" />
-						<Button Grid.Column="1" Text="Delete" HorizontalOptions="End" Margin="2,2,2,2"
-								Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RoutinesPageViewModel}}, Path=DeleteCommand}"
-								CommandParameter="{Binding .}" />
+						<Label
+							Margin="10,5,0,5"
+							FontSize="32"
+							Text="{Binding Name}" />
+						<Button
+							Grid.Column="1"
+							Margin="2,2,2,2"
+							Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RoutinesPageViewModel}}, Path=DeleteCommand}"
+							CommandParameter="{Binding .}"
+							HorizontalOptions="End"
+							Text="Delete" />
 					</Grid>
 				</DataTemplate>
 			</CollectionView.ItemTemplate>
 		</CollectionView>
 
-		<Button Text="Create New Routine"  Margin="10,10,10,10" Command="{Binding GoToNewRoutineCommand}" />
+		<Button
+			Margin="10,10,10,10"
+			Command="{Binding GoToNewRoutineCommand}"
+			Text="Create New Routine" />
 	</StackLayout>
 </ContentPage>
