--- a/MauiTemplate/View/ExercisesPage.xaml
+++ b/MauiTemplate/View/ExercisesPage.xaml
@@ -7,14 +7,14 @@
 	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
 	Title="Exercises"
 	x:DataType="viewmodel:ExercisesPageViewModel"
-	BackgroundColor="#7B8FA1">
+	Style="{StaticResource PageStyle}">
 
 	<StackLayout>
 		<ScrollView VerticalOptions="FillAndExpand">
 			<CollectionView ItemsSource="{Binding ExerciseList}">
 				<CollectionView.ItemTemplate>
 					<DataTemplate x:DataType="model:Exercise">
-						<Grid Margin="0,5,0,5" BackgroundColor="#567189">
+						<Grid Margin="0,5,0,5" Style="{StaticResource GridStyle}">
 							<Grid.RowDefinitions>
 								<RowDefinition />
 							</Grid.RowDefinitions>
@@ -29,17 +29,12 @@
 									NumberOfTapsRequired="1" />
 							</Grid.GestureRecognizers>
 
-							<Label
-								Margin="10,5,0,5"
-								FontSize="32"
-								Text="{Binding Name}" />
-							<Button
+							<Label Margin="10,5,0,5" Text="{Binding Name}" />
+							<ImageButton
 								Grid.Column="1"
-								Margin="2,2,2,2"
 								Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ExercisesPageViewModel}}, Path=DeleteCommand}"
 								CommandParameter="{Binding .}"
-								HorizontalOptions="End"
-								Text="Delete" />
+								Style="{StaticResource DeleteButton}" />
 						</Grid>
 					</DataTemplate>
 				</CollectionView.ItemTemplate>
