--- a/MauiTemplate/View/ExerciseDetailsPage.xaml
+++ b/MauiTemplate/View/ExerciseDetailsPage.xaml
@@ -7,7 +7,8 @@
 	xmlns:viewmodel="clr-namespace:GymTracker.ViewModel"
 	Title="Details"
 	x:DataType="viewmodel:ExerciseDetailsPageViewModel"
-	Shell.FlyoutBehavior="Disabled">
+	Shell.FlyoutBehavior="Disabled"
+	Style="{StaticResource PageStyle}">
 
 	<VerticalStackLayout>
 		<HorizontalStackLayout>
