--- a/MauiTemplate/App.xaml
+++ b/MauiTemplate/App.xaml
@@ -11,8 +11,18 @@
 		</Style>
 		<Style TargetType="Label">
 			<Setter Property="TextColor" Value="#f2e9e4" />
-			<Setter Property="FontSize" Value="16" />
+			<Setter Property="FontSize" Value="20" />
 			<Setter Property="VerticalTextAlignment" Value="Center" />
+		</Style>
+		<Style x:Key="FieldTitle" TargetType="Label">
+			<Setter Property="TextColor" Value="#f2e9e4" />
+			<Setter Property="FontSize" Value="20" />
+			<Setter Property="VerticalTextAlignment" Value="Center" />
+			<Setter Property="Margin" Value="10,0,10,0" />
+		</Style>
+		<Style TargetType="Entry">
+			<Setter Property="FontSize" Value="22" />
+			<Setter Property="Margin" Value="5,5,5,5" />
 		</Style>
 		<Style x:Key="GridStyle" TargetType="Grid">
 			<Setter Property="BackgroundColor" Value="#262626" />
@@ -22,25 +32,28 @@
 			<Setter Property="TextColor" Value="#f2e9e4" />
 			<Setter Property="Margin" Value="2,2,2,2" />
 			<Setter Property="BackgroundColor" Value="#424242" />
-			<Setter Property="FontSize" Value="14" />
+			<Setter Property="FontSize" Value="18" />
 		</Style>
 		<Style x:Key="DeleteButton" TargetType="ImageButton">
-			<Setter Property="BackgroundColor" Value="Transparent" />
-			<Setter Property="Source" Value="bin.ico" />
+			<Setter Property="Source" Value="bin.png" />
 			<Setter Property="MaximumHeightRequest" Value="40" />
 			<Setter Property="MaximumWidthRequest" Value="40" />
+			<Setter Property="HeightRequest" Value="24" />
 		</Style>
 		<Style x:Key="PlusButton" TargetType="ImageButton">
-			<Setter Property="BackgroundColor" Value="Transparent" />
-			<Setter Property="Source" Value="plus.ico" />
+			<Setter Property="Source" Value="plus.png" />
 			<Setter Property="MaximumHeightRequest" Value="40" />
 			<Setter Property="MaximumWidthRequest" Value="40" />
+			<Setter Property="HeightRequest" Value="24" />
 		</Style>
 		<Style x:Key="MinusButton" TargetType="ImageButton">
-			<Setter Property="BackgroundColor" Value="Transparent" />
-			<Setter Property="Source" Value="minus.ico" />
+			<Setter Property="Source" Value="minus.png" />
 			<Setter Property="MaximumHeightRequest" Value="40" />
 			<Setter Property="MaximumWidthRequest" Value="40" />
+			<Setter Property="HeightRequest" Value="24" />
+		</Style>
+		<Style TargetType="CheckBox">
+			<Setter Property="Color" Value="#D4ADFC" />
 		</Style>
 	</Application.Resources>
 </Application>
