--- a/MauiTemplate/View/RoutinesPage.xaml
+++ b/MauiTemplate/View/RoutinesPage.xaml
@@ -22,7 +22,10 @@
 							<ColumnDefinition Width="1*" />
 						</Grid.ColumnDefinitions>
 						<Grid.GestureRecognizers>
-							<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RoutinesPageViewModel}}, Path=RoutineTappedCommand}" NumberOfTapsRequired="1" />
+							<TapGestureRecognizer
+								Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RoutinesPageViewModel}}, Path=RoutineTappedCommand}"
+								CommandParameter="{Binding .}"
+								NumberOfTapsRequired="1" />
 						</Grid.GestureRecognizers>
 
 						<Label Margin="10,5,0,5" Text="{Binding Name}" />
