--- a/MauiTemplate/View/OngoingRoutinePage.xaml
+++ b/MauiTemplate/View/OngoingRoutinePage.xaml
@@ -92,7 +92,18 @@
 										</HorizontalStackLayout>
 									</VerticalStackLayout>
 								</StackLayout>
-								<Button Grid.Row="1" Text="Finish" />
+								<Button
+									Grid.Row="1"
+									Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:OngoingRoutinePageViewModel}}, Path=FinishExerciseCommand}"
+									CommandParameter="{Binding .}"
+									IsVisible="{Binding IsNotFinished}"
+									Text="Finish" />
+								<Button
+									Grid.Row="1"
+									Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:OngoingRoutinePageViewModel}}, Path=ResumeExerciseCommand}"
+									CommandParameter="{Binding .}"
+									IsVisible="{Binding IsFinished}"
+									Text="Resume" />
 							</Grid>
 						</Frame>
 					</Grid>
