--- a/MauiTemplate/View/OngoingRoutinePage.xaml
+++ b/MauiTemplate/View/OngoingRoutinePage.xaml
@@ -111,16 +111,16 @@
 			</CarouselView.ItemTemplate>
 		</CarouselView>
 
-		<IndicatorView
-			x:Name="indicatorView"
-			HorizontalOptions="Center"
-			IndicatorColor="LightGray"
-			SelectedIndicatorColor="DarkGray" />
+		<StackLayout Grid.Row="1">
+			<IndicatorView
+				x:Name="indicatorView"
+				HorizontalOptions="Center"
+				IndicatorColor="LightGray"
+				SelectedIndicatorColor="DarkGray" />
 
+			<Button Text="Exit" VerticalOptions="Center" />
 
-		<Button
-			Grid.Row="1"
-			Text="Exit"
-			VerticalOptions="Center" />
+		</StackLayout>
+
 	</Grid>
 </ContentPage>
